--- a/07-comparisons.Rmd
+++ b/07-comparisons.Rmd
@@ -9,6 +9,7 @@ data.frame(raw = as.numeric(phyloseq::distance(gp_raw, "bray")),
            css = as.numeric(phyloseq::distance(gp_css, "bray")),
            deseq_rle = as.numeric(phyloseq::distance(gp_deseq_rle, "bray")),
            deseq_vs = as.numeric(phyloseq::distance(gp_deseq_vs, "bray")),
+           gmpr = as.numeric(phyloseq::distance(gp_gmpr, "bray")),
            rare = as.numeric(phyloseq::distance(gp_rare, "bray")),
            tmm = as.numeric(phyloseq::distance(gp_tmm, "bray")),
            diff = as.numeric(dist(get_variable(gp_raw, "depth")))) %>% 
@@ -24,6 +25,7 @@ data.frame(raw = as.numeric(phyloseq::distance(k_raw, "bray")),
            css = as.numeric(phyloseq::distance(k_css, "bray")),
            deseq_rle = as.numeric(phyloseq::distance(k_deseq_rle, "bray")),
            deseq_vs = as.numeric(phyloseq::distance(k_deseq_vs, "bray")),
+           gmpr = as.numeric(phyloseq::distance(k_gmpr, "bray", na.rm = T)),
            rare = as.numeric(phyloseq::distance(k_rare, "bray")),
            tmm = as.numeric(phyloseq::distance(k_tmm, "bray")),
            diff = as.numeric(dist(get_variable(k_raw, "depth")))) %>% 
