--- a/04-LibrarySizeComposition_DESeq_GMPR_EdgeR.Rmd
+++ b/04-LibrarySizeComposition_DESeq_GMPR_EdgeR.Rmd
@@ -44,7 +44,8 @@ ds1_df  %>%
     knitr::kable(
         col.names = c("Taxa", "Sample 1", "Sample2", "Sample 3"),
         caption =  "Step 1: Logged Raw Counts", 
-        format = "html"
+        format = "html", 
+        digits = 2
     ) 
 ```
 
@@ -108,7 +109,7 @@ tibble(c(taxa_filtered, "Median", "Exponentiated Median"),
     knitr::kable(
         col.names = c("Taxa", "Sample 1", "Sample 2", "Sample 3"),
         caption =  "Step 4: Calculating medians per sample", 
-        digits = 3
+        digits = 2
     ) 
 ```
 
@@ -121,7 +122,7 @@ tibble(taxa, sample1/exp(median(s1v)), sample2/exp(median(s2v)), sample3/exp(med
         col.names = c("Taxa", "Sample 1", "Sample2", "Sample 3"),
         caption =  "Step 5: DESeq Normalized Counts", 
         format = "html", 
-        digits = 3
+        digits = 2
     ) 
 ```
 
